--- a/.github/ISSUE_TEMPLATE/crash_report.yml
+++ b/.github/ISSUE_TEMPLATE/crash_report.yml
@@ -7,7 +7,7 @@ body:
       value: |
         Thanks for taking the time to fill out this crash report!
         
-        Before continuing to make the issue, please make sure there are no similar issues on [the issue tracker](https://github.com/IrisShaders/Iris/issues). If there are, consider contributing your information in there instead!
+        Before continuing to make the issue, please make sure there are no similar issues on [the issue tracker](https://github.com/Asek3/Oculus). If there are, consider contributing your information in there instead!
         
         Also, make sure you are using the latest version of the mod! If not, try updating to see if it resolves your issue.
   - type: input
@@ -19,19 +19,19 @@ body:
     validations:
       required: true
   - type: input
-    id: iris-version
+    id: oculus-version
     attributes:
-      label: Iris Version
-      description: What version of Iris are you running? Every part is important! If you do not know what version you are using, look at the file name in your "mods" folder.
-      placeholder: ex. iris-mc1.17-1.1.3.jar
+      label: Oculus Version
+      description: What version of Oculus are you running? Every part is important! If you do not know what version you are using, look at the file name in your "mods" folder.
+      placeholder: ex. oculus-mc1.18.2-1.2.5a.jar
     validations:
       required: true
   - type: input
     id: sodium-version
     attributes:
       label: Sodium Version
-      description: What version of Sodium are you running along with Iris? Every part is important! If you do not know what version you are using, look at the file name in your "mods" folder. If you aren't running Sodium please put N/A.
-      placeholder: ex. sodium-fabric-mc1.17.1-0.3.3+build.8.jar
+      description: What version of Sodium are you running along with Oculus? Every part is important! If you do not know what version you are using, look at the file name in your "mods" folder. If you aren't running Sodium please put N/A.
+      placeholder: ex. rubidium-0.5.3a.jar
     validations:
       required: true
   - type: input
@@ -93,9 +93,9 @@ body:
         java.util.ConcurrentModificationException
         	at java.util.ArrayList$Itr.checkForComodification(Unknown Source)
         	at java.util.ArrayList$Itr.next(Unknown Source)
-        	at net.coderbot.iris.pipeline.ShadowRenderer.renderShadows(ShadowRenderer.java:379)
-        	at net.coderbot.iris.pipeline.DeferredWorldRenderingPipeline.renderShadows(DeferredWorldRenderingPipeline.java:651)
-        	at net.minecraft.class_761.handler$ckn000$iris$renderTerrainShadows(class_761.java:9152)
+        	at net.coderbot.oculus.pipeline.ShadowRenderer.renderShadows(ShadowRenderer.java:379)
+        	at net.coderbot.oculus.pipeline.DeferredWorldRenderingPipeline.renderShadows(DeferredWorldRenderingPipeline.java:651)
+        	at net.minecraft.class_761.handler$ckn000$oculus$renderTerrainShadows(class_761.java:9152)
         	at net.minecraft.class_761.method_22710(class_761.java:1149)
         	at net.minecraft.class_757.method_3188(class_757.java:727)
         	at net.minecraft.class_757.method_3192(class_757.java:546)
