Ported to Gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# custom sodium versions
-custom_sodium/
-
 # gradle
 
 .gradle/
@@ -8,12 +5,9 @@ build/
 out/
 classes/
 
-# brachyura
-.brachyura
-*.jfr
+# eclipse
 
-# custom sodium
-/custom_sodium/
+*.launch
 
 # idea
 
@@ -30,17 +24,10 @@ bin/
 .classpath
 .project
 
-# eclipse
+# macos
 
-*.launch
+*.DS_Store
 
 # fabric
 
 run/
-/logs/latest.log
-
-# macOS
-
-.DS_Store
-.AppleDouble
-.LSOverride
