--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx3G
 	loader_version=0.14.6
 
 # Mod Properties
-	mod_version = 1.4.3a
+	mod_version = 1.5.2
 	maven_group = net.coderbot
 	archives_base_name = oculus
 	
