--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -16,3 +16,4 @@ public-f net.minecraft.client.renderer.ShaderInstance f_173320_ # CHUNK_OFFSET
 public-f net.minecraft.client.renderer.ShaderInstance f_173312_ # COLOR_MODULATOR
 public net.minecraft.client.renderer.ShaderInstance f_173331_ # uniforms
 public-f net.minecraft.client.renderer.LevelRenderer f_109464_ # renderBuffers
+public com.mojang.blaze3d.platform.NativeImage f_84964_ # pixels
